--- a/React/ted-talks/src/Header.css
+++ b/React/ted-talks/src/Header.css
@@ -7,6 +7,7 @@
   background: white;
   width: 100%;
   z-index: 1;
+  justify-content: space-between;
 }
 
 .headerText {
@@ -25,17 +26,36 @@
   font-weight: 100;
   margin: 0 12px;
   min-width: 368px;
+  font-family: 'Avenir Next', 'Open Sans Light', sans-serif;
 }
 
 .headerButtons {
   display: inline-block;
-  margin: 14px;
+  margin: 14px 54px 14px 14px;
 }
 
-.item {
+.item, .selectedItem {
   cursor: pointer;
   display: inline;
   margin: 20px;
+}
+
+.selectedItem a {
+  color: rgb(230, 43, 30);
+  text-decoration: none;
+}
+
+@media(max-width:1100px) {
+  .header {
+    display: block;
+  }
+  .headerText {
+    margin-bottom: auto;
+  }
+  .headerButtons {
+    margin: 10px 0 0 -10px;
+    padding: 0;
+  }
 }
 
 .item a {
