--- a/React/ted-talks/src/Tags.css
+++ b/React/ted-talks/src/Tags.css
@@ -21,8 +21,10 @@
 }
 
 .img {
+  display: block;
   margin: auto;
-  width: 85%;
+  max-width: 85%;
+  height: auto;
 }
 
 .centeredTitle {
@@ -31,6 +33,53 @@
 }
 
 .sentimentImg {
+  display: block;
   margin: auto;
-  width: 60%;
+  height: auto;
+  max-width: 60%;
+}
+
+.slider .slick-prev:before {
+  color: black;
+  left: 0 !important;
+}
+
+.slider .slick-next:before {
+  color: black;
+}
+
+.stats {
+  display: flex;
+}
+
+.circle {
+  width: 16%;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 20px;
+  padding: 5% 0;
+  line-height: 0;
+  position: relative;
+  color: black;
+  border: solid 2px #e8e8e8;
+  font-family: 'Avenir Next', 'Open Sans Light', sans-serif;
+  margin: 0 4%;
+}
+
+.circle:hover {
+  cursor: pointer;
+  border: solid 2px #8586D2;
+  color: #8586D2;
+}
+
+.number {
+  margin-bottom: 26%;
+  margin-top: 10%;
+  font-size: 4vw;
+  font-weight: 100;
+}
+
+.description {
+  font-size: 1.5vw;
+  font-weight: 100;
 }
